works on header

--- a/index.html
+++ b/index.html
@@ -46,14 +46,16 @@
     <main class="site-main">
         <section class="hero">
             <div class="container">
-                <div class="front parallax-element" data-parallax-speed="-1">
-                    <img src="img/hoomaluhia-home-cooltone-front.png" alt="hoomaluhia front">
-                </div>
+
+                <img src="img/hoomaluhia-home-cooltone-front.png" class="front parallax-element"
+                    data-parallax-speed="-1" alt="hoomaluhia front">
+
 
                 <img src="img/hoomaluhia-home-cooltone.png" class="back parallax-element" data-parallax-speed="0"
                     alt="hoomaluhia back">
 
                 <h1>HO&#699;OMALUHIA</h1>
+                <h3>BOTANICAL GARDENS</h3>
             </div>
         </section>
         <section id="section-1" class="animate-on-scroll">
